--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode = embedded
 spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.hibernate.ddl-auto = update
+
+graphql.servlet.corsEnabled=true
