Finally (locally) working cors - amazing!!!11!oneone!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.initialization-mode = embedded
 spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.hibernate.ddl-auto = update
 
-graphql.servlet.corsEnabled=true
+graphql.servlet.corsEnabled = false
