--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.hibernate.ddl-auto = update
 
 graphql.servlet.corsEnabled = false
+spring.h2.console.settings.web-allow-others=true
