--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     }
     testImplementation 'org.spockframework:spock-core:2.0-M3-groovy-3.0'
     testImplementation 'org.spockframework:spock-spring:2.0-M3-groovy-3.0'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 }
 
 test {
